# tarsnapper

./: .travis.yml  pyproject.toml  setup.py
tarsnapper/: config.py  expire.py  script.py  test.py
tests/: test_script.py
