[project]
name = "tarsnapper"
version = "0.5.0"
description = "Manages tarsnap backups"
readme = "README.md"
authors = [{ name = "Michael Elsdoerfer", email = "michael@elsdoerfer.com" }]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
]
dependencies = ["pexpect>=3.1", "python-dateutil>=2.4.0", "pyyaml>=3.09"]
license = { text = "BSD" }
requires-python = ">=3.6"

[project.scripts]
tarsnapper = "tarsnapper.script:run"

[project.urls]
Homepage = "http://github.com/miracle2k/tarsnapper"

[tool.flit.sdist]
include = ["simulate.py", "tests/"]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
